# ghc-events-analyze

./: .gitignore  ChangeLog  LICENSE  README.md  cabal.haskell-ci  cabal.project  cabal.project.ci  ghc-events-analyze.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
app/GHC/RTS/Events/Analyze/: Options.hs  Script.hs
app/GHC/RTS/Events/Analyze/Reports/: Timed.hs
app/GHC/RTS/Events/Analyze/Reports/Timed/: SVG.hs
doc/blogpost/: .gitignore  Makefile  ex0-windowed.hs  ex0.hs  ex1.hs  introducing.md  nouser.script
examples/: BlogpostExamples.hs
examples/Examples/: Common.hs  Ex0.hs  Ex0_Windowed.hs  Ex1.hs
src/GHC/RTS/Events/: Analyze.hs
src/GHC/RTS/Events/Analyze/: Analysis.hs  Diagrams.hs  Options.hs  Script.hs  StrictState.hs  Types.hs  Utils.hs
src/GHC/RTS/Events/Analyze/Reports/: SVG.hs  Timed.hs  Totals.hs
src/GHC/RTS/Events/Analyze/Reports/Timed/: SVG.hs
src/GHC/RTS/Events/Analyze/Script/: Standard.hs
